--- a/src/main/resources/reports/estadisticas.jrxml
+++ b/src/main/resources/reports/estadisticas.jrxml
@@ -10,10 +10,12 @@
 	</subDataset>
 	<parameter name="USUARIOS" class="java.lang.String"/>
 	<parameter name="PROPIEDADES" class="java.lang.String"/>
-	<parameter name="ALERTAS" class="java.lang.String"/>
-	<parameter name="NUMERO_ALERTAS" class="java.lang.String"/>
-	<parameter name="PRECIO" class="java.lang.String"/>
-	<parameter name="NUMERO_CARACTERES" class="java.lang.String"/>
+	<parameter name="NUMERO_ALERTAS" class="java.lang.Long"/>
+	<parameter name="PRECIO" class="java.lang.Long"/>
+	<parameter name="LIST_PROPIEDADES" class="java.util.List"/>
+	<parameter name="LIST_USUARIOS" class="java.util.List"/>
+	<parameter name="USUARIOS_ESTADISTICAS" class="java.lang.Object"/>
+	<parameter name="PROPIEDADES_ESTADISTICAS" class="java.lang.Object"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -21,10 +23,10 @@
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
-		<band height="191" splitType="Stretch">
+		<band height="151" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<staticText>
-				<reportElement x="0" y="50" width="290" height="130" uuid="fadba71e-baf3-48b7-ba84-43c30529ddd2"/>
+				<reportElement x="0" y="10" width="290" height="130" uuid="fadba71e-baf3-48b7-ba84-43c30529ddd2"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -36,37 +38,41 @@
 				</textElement>
 				<text><![CDATA[Estadísticas ProperSell]]></text>
 			</staticText>
-			<image>
-				<reportElement x="310" y="50" width="220" height="130" uuid="7b44fbbf-afc4-4ab9-b37a-f1d68b4c616b"/>
-				<imageExpression><![CDATA[""]]></imageExpression>
-			</image>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="557" splitType="Stretch">
+		<band height="577" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField>
-				<reportElement x="30" y="20" width="378" height="30" uuid="d8a75b8f-5f96-4111-817f-28c61ad62c29"/>
+				<reportElement positionType="Float" x="30" y="20" width="378" height="30" uuid="d8a75b8f-5f96-4111-817f-28c61ad62c29"/>
 				<textElement>
 					<font size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Propiedades que cuestan más de " +$P{PRECIO}+ " euros"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="170" width="379" height="30" uuid="0ea54d06-e412-4e59-ad59-cc7790039821"/>
+				<reportElement positionType="Float" x="40" y="270" width="379" height="30" uuid="0ea54d06-e412-4e59-ad59-cc7790039821"/>
 				<textElement>
 					<font size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Usuarios con más de "  + $P{NUMERO_ALERTAS} +" alertas"
-]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Usuarios con más de "  + $P{NUMERO_ALERTAS} +" alertas"]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="30" y="340" width="380" height="30" uuid="33b5c038-08a7-4f73-925c-1abf3021aa45"/>
-				<textElement>
-					<font size="16"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Alertas con descripción de más de " +$P{NUMERO_CARACTERES}+ " caracteres"]]></textFieldExpression>
-			</textField>
+			<subreport isUsingCache="true" runToBottom="true">
+				<reportElement positionType="Float" mode="Transparent" x="30" y="70" width="490" height="40" uuid="85837b66-9925-4ba4-b2be-cafcac72fe08">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{LIST_PROPIEDADES})]]></dataSourceExpression>
+				<subreportExpression><![CDATA[$P{PROPIEDADES_ESTADISTICAS}]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement positionType="Float" mode="Transparent" x="32" y="330" width="490" height="40" uuid="ea3834b7-12a7-4a0b-94b0-632d0f527660">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{LIST_USUARIOS})]]></dataSourceExpression>
+				<subreportExpression><![CDATA[$P{USUARIOS_ESTADISTICAS}]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 	<pageFooter>
